RRC and Ver 2 Folder
Added RRCs of each modules and View Amenity Info and Search UTS Version
2

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ UI/UI_Alpha/screen 9_aboutus.png
 UI/UI_Alpha/contentupdatetest.png
 UI/UI_Alpha/screen 9_aboutus.png
 UI/UI_Alpha/screen 9_aboutus.png
+Confourmus/02_Requirements Specification/Requirements Specifications/U-EASY_Requirements_Specification_V4.00.xls
